--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build":"react-scripts build"
+    "build":"react-scripts build",
+    "postinstall": "npm install --prefix ./client"
   },
   "keywords": [],
   "author": "",
