--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "react-scripts build"
+    "build": "node server"
   },
   "keywords": [],
   "author": "",
